--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-loader": "^4.0.2",
     "style-loader": "^2.0.0",
     "tailwindcss": "^1.8.10",
+    "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
